Blender crash on playback with Freestyle and Rendered viewport display. Happened every time on three different computers. #47342

Closed
opened 2016-02-06 13:29:51 +01:00 by Pablo López Soriano · 5 comments

System Information
Ubuntu 15.04 64bit - ThinkPad W520 Nvidia Optimus 1000M
Windows 7 64bit - ATI R7260X
Windows 10 64bit - Nvidia --

Blender Version
Broken: 2.76b

Short description of error
Blender freezes and/or closes down on playback or timeline scrubbing, while Rendered viewport mode. The scene has multiple Freestyle line sets.

Exact steps for others to reproduce the error
Change the viewport display to rendered. Playback or scrub the timeline until it happens (very soon in the three computers I tried).

set_03.blend

**System Information** Ubuntu 15.04 64bit - ThinkPad W520 Nvidia Optimus 1000M Windows 7 64bit - ATI R7260X Windows 10 64bit - Nvidia -- **Blender Version** Broken: 2.76b **Short description of error** Blender freezes and/or closes down on playback or timeline scrubbing, while Rendered viewport mode. The scene has multiple Freestyle line sets. **Exact steps for others to reproduce the error** Change the viewport display to rendered. Playback or scrub the timeline until it happens (very soon in the three computers I tried). [set_03.blend](https://archive.blender.org/developer/F280420/set_03.blend)

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @kednar

Added subscriber: @kednar
Brecht Van Lommel self-assigned this 2016-02-07 16:18:45 +01:00

Seems to be a deadlock in the main thread mutex added in 3ce280e8.

Seems to be a deadlock in the main thread mutex added in 3ce280e8.

This issue was referenced by 8f6912392d

This issue was referenced by 8f6912392d93c050e99ddb33b98140c28dd880a3

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#47342
No description provided.